src/test/ui/feature-gates/feature-gate-no_sanitize.stderr
error[E0658]: the `#[no_sanitize]` attribute is an experimental feature
  --> $DIR/feature-gate-no_sanitize.rs:1:1
   |
LL | #[no_sanitize(address)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #39699 <https://github.com/rust-lang/rust/issues/39699> for more information
   = help: add `#![feature(no_sanitize)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
